lab1/Test/L1-A-4-50.output
Error Type B at Line 2
Error Type B at Line 6
Error Type B at Line 8
Error Type B at Line 11
Error Type B at Line 12
Error Type B at Line 16
